tests/src/snapshots/fe_compiler_tests__compile_errors__call_event_with_wrong_types.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: missing argument label
  ┌─ fixtures/compile_errors/call_event_with_wrong_types.fe:7:22
  │
7 │         emit MyEvent("foo", 1000)
  │                      ^ add `val_1=` here
  │
  = Note: this label is optional if the argument is a variable named `val_1`.

error: missing argument label
  ┌─ fixtures/compile_errors/call_event_with_wrong_types.fe:7:29
  │
7 │         emit MyEvent("foo", 1000)
  │                             ^ add `val_2=` here
  │
  = Note: this label is optional if the argument is a variable named `val_2`.

error: incorrect type for `MyEvent` argument `val_1`
  ┌─ fixtures/compile_errors/call_event_with_wrong_types.fe:7:22
  │
7 │         emit MyEvent("foo", 1000)
  │                      ^^^^^ this has type `string<3>`; expected type `string<100>`

error: incorrect type for `MyEvent` argument `val_2`
  ┌─ fixtures/compile_errors/call_event_with_wrong_types.fe:7:29
  │
7 │         emit MyEvent("foo", 1000)
  │                             ^^^^ this has type `u256`; expected type `u8`


